@@ -2,14 +2,16 @@
 Hash: SHA512
 
 DIST gitdb-0.5.2.tar.gz 171142 RMD160 8acf62d2777c7559e6dc4d6528e04e6ef0f0388d SHA1 31de657c7c4decf95877e15c7985e10cdaa75c62 SHA256 7105fa7611271ed490775a704e1c6d42b1c2886f422f707db136bad216c5bbac
+DIST gitdb-0.5.4.tar.gz 50258 RMD160 21961026cb560f85450c356464a7d1018000902a SHA1 2e01b48f53f1716e59291b4183449e7fe3e574ea SHA256 de5d2dac0daec4a9cd7bb1ae1cd42d53510dcf597397c608c12a154b69ad3783
 EBUILD gitdb-0.5.2.ebuild 514 RMD160 8995ebc4685a943df771e5a24cb6abe6fbde7d0c SHA1 b9f42779b365f8758b11d9003e99f6df315db302 SHA256 c3b4ed4ca2f1ed8b85ddc2c6c1965b17139b84944c0026584cdc9e95c31c5ead
-MISC ChangeLog 541 RMD160 ff118c588041ff488df43600f19763c767b6f220 SHA1 377791f977c70517840d738bf94337af638f9e7b SHA256 2c874be76c7061c93892179943e414dc7038308750ac3e7b75e24f589ee9e24b
+EBUILD gitdb-0.5.4.ebuild 516 RMD160 ea71ee4a8a974f04665e66259bc98c9e1dbca213 SHA1 8ce04e24fc171a676c506bc1b568b4eb745126c3 SHA256 e41e2841e285478bf4c95950b1e63d8a165c2fcc9b15bff26b22e162c7524740
+MISC ChangeLog 658 RMD160 af5ca8e84055cb5e02b30a77f31ad0e72db95725 SHA1 15b19fdce6107f3f4dde756b8237ef273242b195 SHA256 3a05e4ad0c0fd3777dbe6ed78aac340d0e05f77c0154f9e4aa91d212836489a4
 MISC metadata.xml 1256 RMD160 822a4bd10778b84139f7aa9bdde92e34befe1402 SHA1 858bcadb6853fcdd40f590647f4a89d0373cb030 SHA256 cbeae90b6872d8de65ef9c9b85af6a1e8c8ecb63ae121c85f25059cb91dc0077
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk4GBmEACgkQzJrj3cAXR0mpoACgj29Q/84G5IStKd9aogHkWEZI
-1MMAnA50SLbppOZ3cAcUxAjaJTIRRBDQ
-=mhU8
+iEYEAREKAAYFAk4YWd4ACgkQzJrj3cAXR0m2ngCfc9Vq1matkrH7t6qA+5vENRLu
+71wAni/9IQrxAwWzjNI9/zLeL+TcrNBl
+=cKR1
 -----END PGP SIGNATURE-----
