@@ -1,0 +1,22 @@
+>=app-admin/eselect-python-20091230 =dev-lang/python-2*
+>=dev-python/async-0.5.2 >=app-admin/eselect-python-20091230 =dev-lang/python-2*
+0
+mirror://pypi/g/gitdb/gitdb-0.5.4.tar.gz
+
+http://pypi.python.org/pypi/gitdb/
+BSD
+GitDB is a pure-Python git object database
+~amd64 ~x86
+distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
+
+
+
+
+3
+
+compile install postinst postrm prepare
+
+
+
+
+
