@@ -65,6 +65,8 @@
 * dev-python/webcolors-1.3.1                  x86 SCHEDULED: <2011-08-08 Mon>
 * media-gfx/blockdiag-0.8.4                 amd64 SCHEDULED: <2011-08-08 Mon>
 * media-gfx/blockdiag-0.8.4                   x86 SCHEDULED: <2011-08-08 Mon>
+* dev-vcs/gitdb-0.5.4                       amd64 SCHEDULED: <2011-08-08 Mon>
+* dev-vcs/gitdb-0.5.4                         x86 SCHEDULED: <2011-08-08 Mon>
 * dev-perl/Net-Twitter-Lite-0.10004         amd64 SCHEDULED: <2011-08-15 Mon>
 * dev-perl/Net-Twitter-Lite-0.10004           x86 SCHEDULED: <2011-08-15 Mon>
 * dev-python/twython-1.4.2                  amd64 SCHEDULED: <2011-08-16 Tue>
