@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*gitdb-0.5.4 (09 Jul 2011)
+
+  09 Jul 2011; James Rowe <jnrowe@gmail.com> +gitdb-0.5.4.ebuild:
+  Version bump [420].
+
   13 Mar 2011; James Rowe <jnrowe@gmail.com> gitdb-0.5.2.ebuild:
   Keyworded x86.
 
